; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_multi_resowner.c_ResourceOwnerRememberJobDirectory.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_multi_resowner.c_ResourceOwnerRememberJobDirectory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@NumRegisteredJobDirectories = common dso_local global i32 0, align 4
@NumAllocatedJobDirectories = common dso_local global i32 0, align 4
@RegisteredJobDirectories = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ResourceOwnerRememberJobDirectory(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %5, align 8
  %6 = load i32, i32* @NumRegisteredJobDirectories, align 4
  %7 = add nsw i32 %6, 1
  %8 = load i32, i32* @NumAllocatedJobDirectories, align 4
  %9 = icmp sle i32 %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @Assert(i32 %10)
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** @RegisteredJobDirectories, align 8
  %13 = load i32, i32* @NumRegisteredJobDirectories, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i64 %14
  store %struct.TYPE_3__* %15, %struct.TYPE_3__** %5, align 8
  %16 = load i32, i32* %3, align 4
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 1
  store i32 %16, i32* %18, align 4
  %19 = load i32, i32* %4, align 4
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  %22 = load i32, i32* @NumRegisteredJobDirectories, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* @NumRegisteredJobDirectories, align 4
  ret void
}

declare dso_local i32 @Assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
